[package]
name = "tcc"
version = "0.1.0"
authors = ["rot1024 <aayhrot@gmail.com>"]
edition = "2018"
description = "TaskChute Cloud utility tool"

[dependencies]
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0.55"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8.13"
encoding_rs_io = "0.1.3"
csv = "1.0.5"
clap = "3.0.0-beta.1"
